--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 </div>
             </article>
             <article class="article2">
-                <p>What We Do</p>
+                <h2>What We Do</h2>
                 <p>주변환경을 생각하는 개발 소비자의 품격 있는 삶을 위한 주거문화 창달에 노력하고 있습니다.</p>
                 <div class="infoimg row">
                     <ul class="cf">
@@ -90,7 +90,7 @@
                 </div>
             </article>
             <article class="article4 row cf">
-                <p>Product</p>
+                <h2>Product</h2>
                 <p>최고의 prestige와 공간가치를 창조하는 global partner,건축물과 주변환경을 생각하는 개발 소비자의 품격 있는 삶을 위한 주거문화 창달에 노력하고 있습니다.</p>
                 <div class="pdinner1 cf">
                     <div class="innerbox">
